test/errors/resolution/multipleQuestionArgs.compopts
--detailed-errors # multipleQuestionArgs-detailed.good
--no-detailed-errors # multipleQuestionArgs-brief.good
